--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
 				<div class="card">
 					<img src="img/card_nov4.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center"> Mural 17-Mayo</h5>
-						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
+						<h5 class="titulo-card text-center">🌈PSYCOMEZCLA🌈
+							</h5>
+						<p>Cuadro 61X31 Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
 				</div>
@@ -193,7 +194,7 @@
 
 	<footer class="w-100 d-flex align-items justify-content-center flex-wrap bg-secondary text-white">
 		<div id="iconos" class="px-1 py-2">
-			<a href="https://api.whatsapp.com/send?phone=543512909979&text=Me gustaria agendar un turno!"><i class="bi bi-whatsapp"></i></a>
+			<a href="https://api.whatsapp.com/send?phone=543518138812&text=Me gustaria agendar un turno!" target="new_blank"><i class="bi bi-whatsapp"></i></a>
 			<a href="https://www.instagram.com/cota.art35" target="_blank" title="instagram"><i class="bi bi-instagram"></i></a>
 			<a href="https://www.facebook.com/CotaArt35-103750124939834" target="new_blank"><i class="bi bi-facebook"></i></a>
 			<a href="#"><i class="bi bi-youtube"></i></a>
