last_change_maps

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 			</div>
 			<div class="col-sm-12 col-md-6 col-xl-4">
 				<div class="card">
-					<img src="img/card_nov3.jpg" alt="" class="card-img-top img-fluid">
+					<img src="img/card_nov9.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center">Muro N°2️⃣ (frente)</h5>
+						<h5 class="titulo-card text-center"> Signo Zodiacal Leo</h5>
 						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -132,7 +132,7 @@
 			</div>
 			<div class="col-sm-12 col-md-6 col-xl-4">
 				<div class="card">
-					<img src="img/card_nov4.jpg" alt="" class="card-img-top img-fluid">
+					<img src="img/card_nov7.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
 						<h5 class="titulo-card text-center">🌈PSYCOMEZCLA🌈
 							</h5>
@@ -153,9 +153,9 @@
 			</div>
 			<div class="col-sm-12 col-md-6 col-xl-4">
 				<div class="card">
-					<img src="img/card_nov6.jpg" alt="" class="card-img-top img-fluid">
+					<img src="img/card_nov8.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center"> 🖤BLACKOUT🖤</h5>
+						<h5 class="titulo-card text-center"> Querer es poder</h5>
 						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -169,7 +169,7 @@
 <section id="horarios" class="container-xl bg-dark text-white">
 	<div class=" mx-auto row pb-4" >
 		<div id="horarios" class="col-sm-12 col-md-6 d-flex justify-content-center">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1013.0440765123167!2d-63.94556610139381!3d-31.346268495720857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432eb9db28e849b%3A0x36dd259e651217c2!2sDo%C3%B1a%20Ofelia%20rotiseria!5e0!3m2!1ses!2sar!4v1653540174160!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><!-- <img src="img/maps.png" class="img-fluid pt-5 pb-2 " alt="ubicacion">-->
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d425.93108368244845!2d-63.94478187480427!3d-31.346595899999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432eaba4ef94e1b%3A0x11fe91eb2cfe9bbf!2sCristobal%20Col%C3%B3n%20226%2C%20X5125%20Monte%20Cristo%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1653598093759!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 		<div class="text-center align-self-center col-sm-12 col-md-6">
 		<p class="fw-bold fs-3 mt-3">HORARIOS</p>
