--- a/index.html
+++ b/index.html
@@ -3,108 +3,109 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta lang="es">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="scss/estilos.css">
+	<meta name="description" content="Somos un estudio artístico, donde ponemos tus ideas, en la piel o lo pintamos en tu pared, donde mas te guste !">
 	<title>Cota - Estudio</title>
 </head>
 <body>
-
-<!--===========================================================================-->
+	
 <!--========================= HEADER =========================-->
-	<header class="sticky-top">	
-		<nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-secondary container-fluid">
+	<div id="header" class="sticky-top">	
+		<nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-dark container-fluid">
 		  <div class="container-fluid flex-fill d-flex">
-		    <a class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
-		    	<img src="img/logo_main.jpg">
-		    </a>
-		    <span class=" fs-2 me-3 flex-fill fw-bold flex-s-fill flex-md-fill flex-xl-fill">
-		    	COTA ESTUDIO
-			</span>
+		    <a title="Cota-Estudio" class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
+		    	<img src="img/cota-tittle.png">
+		    </a>		    
 		    <button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
 		    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-		      <ul class="navbar-nav fs-5 me-auto mb-2 mb-lg-0">
+		      <ul class="navbar-nav fs-5">
 		        <li class="nav-item">
 		          <a class="nav-link active" aria-current="page" href="#">Home</a>
 		        </li>
 		        <li class="nav-item">
-		          <a class="nav-link" href="#">Contacto</a>
+		          <a class="nav-link" href="contacto.html">Contacto</a>
 		        </li>
 		           <li class="nav-item">
 		          <a class="nav-link" href="staff.html">Staff</a>
 		        </li>
 		           <li class="nav-item">
-		          <a class="nav-link" href="#">Galeria</a>
+		          <a class="nav-link" href="galeria.html">Galeria</a>
 		        </li>
 		           <li class="nav-item">
-		          <a class="nav-link" href="#">Merchandising</a>
+		          <a class="nav-link" href="merchandising.html">Merchandising</a>
 		        </li>	
 		      </ul>
 		    </div>
 		  </div>
 		</nav>
-	</header>
-<!--===========================================================================-->
-<!--========================= BANNER DE PRESENTACION =========================-->
-	<div id="banner" class=" bg-dark d-flex align-items-center container-fluid border-top border-bottom border-white border-5">
-		<div class="">
-
-			<div class=" my-5 mx-auto row text-white">
-				<img class="my-3 mx-auto col-sm-12 col-md-6 image-fluid"src="img/equipo.jpg">			
-				<div class="text-center my-3 fs-2 mx-auto col-sm-12 col-md-6 align-self-center">Colectivo de Trabajadores Artisticos
-					<p class=" mt-2 fs-6 align-self-center">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
+	</div>
+<!--========================= CAROUSEL PRESENTACION =========================-->
+	<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+		<div class="carousel-indicators">
+		<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+		<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		</div>
+		<div class="carousel-inner">		
+			<div class="carousel-item active">
+				<img src="img/bg_grafiti.webp" class="d-block w-100" alt="Staff">
+				<div class="container">
+					<h1>SOMOS COTA ESTUDIO</h1>
+					<h2>Más que solo un estudio de Tatuajes</h2>
+					<a href="#" class="btn btn-sm btn-dark">
+						Mas de nosotros
+					</a>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img src="img/bg_grafiti.webp" class="d-block w-100" alt="Mural-Cota-Estudio1">
+				<div class="container">
+					<h1>SOMOS COTA ESTUDIO</h1>
+					<h2>Más que solo un estudio de Tatuajes</h2>
+					<a href="#" class="btn btn-sm btn-dark">
+						Mas de nosotros
+					</a>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img src="img/bg_grafiti.webp" class="d-block w-100" alt="Mural-Cota-Estudio2">
+				<div class="container">
+					<h1>SOMOS COTA ESTUDIO</h1>
+					<h2>Más que solo un estudio de Tatuajes</h2>
+					<a href="#" class="btn btn-sm btn-dark">
+						Mas de nosotros
+					</a>
 				</div>
 			</div>
 		</div>
+		<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Next</span>
+		</button>
 	</div>
-<!--===========================================================================-->
-<!--========================= CARROUSEL =========================-->
-	<section class="container-fluid bg-dark carouselContainer">
-		<div class="row ">
-			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-				<div class="carousel-inner">
-				  <div class="carousel-item active">
-					<img src="img/ejemplo2.jpg" class="d-block w-100" alt="...">
-				  </div>
-				  <div class="carousel-item">
-					<img src="img/ejemplo1.jpg" class="d-block w-100" alt="...">
-				  </div>
-				  <div class="carousel-item">
-					<img src="img/ejemplo3.jpg" class="d-block w-100" alt="...">
-				  </div>
-				  <div class="carousel-item">
-					<img src="img/ejemplo5.jpg" class="d-block w-100" alt="...">
-				  </div>
-				  <div class="carousel-item">
-					<img src="img/ejemplo6.jpg" class="d-block w-100" alt="...">
-				  </div>				
-				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				  <span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-				  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-				  <span class="visually-hidden">Next</span>
-				</button>
-			  </div>
-		</div>		
-	</section>	
-<!--===========================================================================-->
+<!--========================= CONTENIDO (A FUTURO) =========================-->
+<section>
+<!-- Futuro contenido que todavia no se puede especificar-->>
+</section>
 <!--========================= CARDS NOVEDADES =========================-->
 <section id="novedades">
-	<div class="container mt-2">
-		<h3 class=" text-center text-white fw-bold">NOVEDADES MAYO</h3>
+	<div class="container mt-3 mb-4">
+		<h3 class=" text-center text-white fw-">NOVEDADES MAYO</h3>
 		<div class="row g-3">
 			<div class="col-sm-12 col-md-6 col-xl-4">
 				<div class="card">
 					<img src="img/card_nov1.jpg" alt="" class="card-img-top  img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center"> Mural 17-Mayo</h5>
+						<h4 class="titulo-card text-center"> Mural 17-Mayo</h4>
 						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -114,7 +115,7 @@
 				<div class="card">
 					<img src="img/card_nov2.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center"> Viaje de Chihiro</h5>
+						<h4 class="titulo-card text-center"> Viaje de Chihiro</h4>
 						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -124,7 +125,7 @@
 				<div class="card">
 					<img src="img/card_nov9.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center"> Signo Zodiacal Leo</h5>
+						<h4 class="titulo-card text-center"> Signo Zodiacal Leo</h4>
 						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -134,8 +135,8 @@
 				<div class="card">
 					<img src="img/card_nov7.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center">🌈PSYCOMEZCLA🌈
-							</h5>
+						<h4 class="titulo-card text-center">🌈PSYCOMEZCLA🌈
+							</h4>
 						<p>Cuadro 61X31 Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -145,7 +146,7 @@
 				<div class="card">
 					<img src="img/card_nov5.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center"> Casio 4:20</h5>
+						<h4 class="titulo-card text-center"> Casio 4:20</h4>
 						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -155,7 +156,7 @@
 				<div class="card">
 					<img src="img/card_nov8.jpg" alt="" class="card-img-top img-fluid">
 					<div class="card-body">
-						<h5 class="titulo-card text-center"> Querer es poder</h5>
+						<h4 class="titulo-card text-center"> Querer es poder</h4>
 						<p>Darle vida 💥 y color 🌈 a las paredes es algo q nos llena el alma 💜, este muro 🕋 de 20 metros cuadrados pedía a gritos 🗯 un poco de pigmentación 🎨 en sus poros. menos mal q estuvimos ahí para poder dárselo 💪
 						</p>
 					</div>
@@ -164,9 +165,8 @@
 		</div>
 	</div>
 </section>
-<!--===========================================================================-->
 <!--========================= HORARIOS =========================-->
-<section id="horarios" class="container-xl bg-dark text-white">
+<section id="horarios" class="container-fluid bg-white">
 	<div class=" mx-auto row pb-4" >
 		<div id="horarios" class="col-sm-12 col-md-6 d-flex justify-content-center">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d425.93108368244845!2d-63.94478187480427!3d-31.346595899999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432eaba4ef94e1b%3A0x11fe91eb2cfe9bbf!2sCristobal%20Col%C3%B3n%20226%2C%20X5125%20Monte%20Cristo%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1653598093759!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -182,25 +182,27 @@
 				<ol class="text-center fs-4">Sábado: 12:00hs a 20:00hs</ol>
 				<ol class="text-center fs-4">Domingo: 12:00hs a 20:00hs</ol>
 			</ul>
-			<a class="btn btn-primary m-0" href="https://api.whatsapp.com/send?phone=543518138812&text=Me gustaria agendar un turno!" target="new_blank" role="button">RESERVÁ TU TURNO</a>
+			<a class="btn btn-primary my-2" href="https://api.whatsapp.com/send?phone=543518138812&text=Me gustaria agendar un turno!" target="new_blank" role="button">RESERVÁ TU TURNO</a>
 		</div>
 	</div>
 	<div class="containter-fluid text-center pb-2 fs-2 mb-2">
 		<span>TE ESPERAMOS !</span>
 	</div>
 </section>
-<!--===========================================================================-->
+<div class="btn-wsp">
+	<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!" title="Sacá tu turno" target="new_blank">
+		<img src="img/whatsapp.png" alt="whatsapp"></a>
+</div>
 <!--========================= FOOTER =========================-->
-
-	<footer class="w-100 d-flex align-items justify-content-center flex-wrap bg-secondary text-white">
+	<div id="footer" class="w-100 d-flex align-items justify-content-center flex-wrap bg-secondary text-white">
 		<div id="iconos" class="px-1 py-2">
-			<a href="https://api.whatsapp.com/send?phone=543518138812&text=Me gustaria agendar un turno!" target="new_blank"><i class="bi bi-whatsapp"></i></a>
-			<a href="https://www.instagram.com/cota.art35" target="_blank" title="instagram"><i class="bi bi-instagram"></i></a>
-			<a href="https://www.facebook.com/CotaArt35-103750124939834" target="new_blank"><i class="bi bi-facebook"></i></a>
+			<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!"	title="Comunicate con nosotros via whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
+			<a href="https://www.instagram.com/cota.art35" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
+			<a href="https://www.facebook.com/CotaArt35-103750124939834" title="Acercate a ver nuestras publicaciones de facebook" target="new_blank"><i class="bi bi-facebook"></i></a>
 			<a href="#"><i class="bi bi-youtube"></i></a>
 			<p class="fs-6 px-3 pt-3 text-white"> Cota Estudio &copy; 2022 - TioOti - Todos los derechos reservados </p>
 		</div>
-	</footer>
+	</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
