--- a/contacto.html
+++ b/contacto.html
@@ -13,37 +13,37 @@
 <body>
 	
 <!--========================= HEADER =========================-->
-	<div id="header" class="sticky-top">	
-		<nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-dark container-fluid">
-		  <div class="container-fluid flex-fill d-flex">
-		    <a class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
-		    	<img src="img/cota-tittle.png">
-		    </a>		    
-		    <button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-		      <ul class="navbar-nav fs-5">
-		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="contacto.html">Contacto</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="staff.html">Staff</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="galeria.html">Galeria</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="merchandising.html">Merchandising</a>
-		        </li>	
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
-	</div>
+<div id="header" class="sticky-top">		
+	<nav class="navbar justify-content-center navbar-expand-lg navbar-light container-fluid">
+	  <div class="container-fluid flex-fill d-flex">
+		<a title="Cota-Estudio" class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
+			<img src="img/cota-tittle.png">
+		</a>		    
+		<button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+		  <ul class="navbar-nav fs-5">
+			<li class="nav-item">
+			  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="contacto.html">Contacto</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="staff.html">Staff</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="galeria.html">Galeria</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="merchandising.html">Merchandising</a>
+			</li>	
+		  </ul>
+		</div>
+	  </div>	  
+	</nav>
+</div>
 <!--===========================================================================-->
 <!--========================= FORMULARIO =========================-->
 <section>
@@ -51,12 +51,12 @@
 		<div id="formulario_" class="row">	
 			<div class="col-sm-12">
 				<article class="row col-sm-12 text-light">
-					<div id="titulo_separador" class="text-center mb-4 col-12">COTA ESTUDIO - MONTE CRISTO</div>
+					<h1 class="text-center fs-6 mb-4 col-12"> COTA ESTUDIO - MONTE CRISTO</h1>
 					<div class="col-xl-4">
-						<h3 class="">INFORMACIÓN</h3>
+						<h3 class="my-5 text-center">INFORMACIÓN</h3>
 							<ul>
 								<li>Dirección: Colón 226</li>
-								<li>WhatsApp: +54 9 351 8008 176</li>
+								<li>WhatsApp: 3518138812</li>
 								<li>Teléfono: 3518138812</li>
 								<li>Horarios: Lunes a Sábados de 10:00 a 20:00 hs</li>
 							</ul>
@@ -84,7 +84,7 @@
 						<label for="telefono">Numero de Telefono</label>
 					</div>
 					<div class="mb-3">
-						<select class="form-select form-select-md" aria-label="Default select example">
+						<select class="form-select form-select-md" aria-label="Motivo de tu consulta">
 							<option selected>Motivo de tu consulta</option>
 							<option value="1">Tatuaje</option>
 							<option value="2">Piercing</option>
@@ -99,7 +99,7 @@
 			</div>	
 		</div>
 	</div>
-	<div class="containter-fluid text-center pb-2 fs-2">
+	<div class="containter-fluid text-center pb-2 my-3 fs-2">
 		<span>TE ESPERAMOS !</span>
 	</div>
 	<div class="btn-wsp">
