--- a/galeria.html
+++ b/galeria.html
@@ -7,47 +7,135 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="scss/estilos.css">
-	<meta name="description" content="Somos un estudio artístico, donde ponemos tus ideas, en la piel o lo pintamos en tu pared, donde mas te guste !">
+	<meta name="description" content="Somos un estudio artístico, donde ponemos tus ideas, en la piel o lo pintamos en tu pared, donde mas te guste ! Vení a conocernos ..">
 	<title>Cota - Estudio</title>
 </head>
 <body>
 	
 <!--========================= HEADER =========================-->
-	<div id="header" class="sticky-top">	
-		<nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-dark container-fluid">
-		  <div class="container-fluid flex-fill d-flex">
-		    <a class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
-		    	<img src="img/cota-tittle.png">
-		    </a>		    
-		    <button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-		      <ul class="navbar-nav fs-5">
-		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="contacto.html">Contacto</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="staff.html">Staff</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="galeria.html">Galeria</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="merchandising.html">Merchandising</a>
-		        </li>	
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
-	</div>
+<div id="header" class="sticky-top">		
+	<nav class="navbar justify-content-center navbar-expand-lg navbar-light container-fluid">
+	  <div class="container-fluid flex-fill d-flex">
+		<a title="Cota-Estudio" class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
+			<img src="img/cota-tittle.png">
+		</a>		    
+		<button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+		  <ul class="navbar-nav fs-5">
+			<li class="nav-item">
+			  <a class="nav-link active" aria-current="page" href="#">Home</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="contacto.html">Contacto</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="staff.html">Staff</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="galeria.html">Galeria</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="merchandising.html">Merchandising</a>
+			</li>	
+		  </ul>
+		</div>
+	  </div>	  
+	</nav>
+</div>
 <!--========================= GALERIA DE IMAGENES =========================-->
-<section class="contenedor-xl row">
-		<h2 class="text-center text-white"> ALGO DE NUESTRO ARTE</h2>
-</section>
+<section id="galeria" class="min-vh-100">
+	<div class="container-xl">
+		<div class="titulo_gallery1"> TIO HACHE</div>
+		<div class="gallery1 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+		<div class="col">
+			<img src="img/img_corregidas_900x600/th1.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+			<img src="img/img_corregidas_900x600/th_main.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+			<img src="img/img_corregidas_900x600/th3.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+			<img src="img/img_corregidas_900x600/th4.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+			<img src="img/img_corregidas_900x600/todos2.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+			<img src="img/img_corregidas_900x600/th6.jpg" class="gallery-item" alt="gallery">
+		</div>
+		</div>
+		<div class="titulo_gallery2"> CHANCHA</div>
+		<div class="gallery2 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+		<div class="col">
+		<img src="img/img_corregidas_900x600/chch1.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+		<img src="img/img_corregidas_900x600/chancha_main.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+		<img src="img/img_corregidas_900x600/chch3.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+		<img src="img/img_corregidas_900x600/chch4.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+		<img src="img/img_corregidas_900x600/todos3.jpg" class="gallery-item" alt="gallery">
+		</div>
+		<div class="col">
+		<img src="img/img_corregidas_900x600/chch6.jpg" class="gallery-item" alt="gallery">
+		</div>
+		</div>
+		<div class="titulo_gallery3"> CHIRY</div>
+		<div class="gallery3 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+			<div class="col">
+			<img src="img/img_corregidas_900x600/chiry1.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/chiry2.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/chiry3.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/chiry4.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/todos1.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/chiry6.jpg" class="gallery-item" alt="gallery">
+			</div>
+		</div>
+		<div class="titulo_gallery4"> LUCHO</div>
+		<div class="gallery4 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+			<div class="col">
+			<img src="img/img_corregidas_900x600/lucho5.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/lucho_main.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/lucho3.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/lucho4.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/todos4.jpg" class="gallery-item" alt="gallery">
+			</div>
+			<div class="col">
+			<img src="img/img_corregidas_900x600/lucho6.jpg" class="gallery-item" alt="gallery">
+			</div>
+		</div>
+	</div>
+ </section>
+
+<!--========================= FLOAT WSP BUTTON =========================-->
+
 <div class="btn-wsp">
 	<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!" title="Sacá tu turno" target="new_blank">
 		<img src="img/whatsapp.png" alt="whatsapp"></a>
@@ -56,7 +144,7 @@
 <!--========================= FOOTER =========================-->
 <div id="footer" class="w-100 d-flex align-items justify-content-center flex-wrap bg-secondary text-white">
 	<div id="iconos" class="px-1 py-2">
-		<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!"	title="Comunicate con nosotros via whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
+		<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!"	title="Comunicate con nosotros via Whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
 		<a href="https://www.instagram.com/cota.art35" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
 		<a href="https://www.facebook.com/CotaArt35-103750124939834" title="Acercate a ver nuestras publicaciones de facebook" target="new_blank"><i class="bi bi-facebook"></i></a>
 		<a href="#"><i class="bi bi-youtube"></i></a>
