--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 	
 <!--========================= HEADER =========================-->
-	<div id="header" class="sticky-top">	
-		<nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-dark container-fluid">
+	<div id="header" class="sticky-top">		
+		<nav class="navbar justify-content-center navbar-expand-lg navbar-light container-fluid">
 		  <div class="container-fluid flex-fill d-flex">
 		    <a title="Cota-Estudio" class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
 		    	<img src="img/cota-tittle.png">
@@ -42,8 +42,12 @@
 		      </ul>
 		    </div>
 		  </div>
-		</nav>
+		  
+		</nav>		
 	</div>
+	<header class="container-fluid">
+			<h2>COLECTIVO DE TRABAJADORES ARTISTICOS</h2>
+	</header>
 <!--========================= CAROUSEL PRESENTACION =========================-->
 	<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
@@ -57,7 +61,7 @@
 				<div class="container">
 					<h1>SOMOS COTA ESTUDIO</h1>
 					<h2>Más que solo un estudio de Tatuajes</h2>
-					<a href="#" class="btn btn-sm btn-dark">
+					<a href="staff.html" class="btn btn-sm btn-dark">
 						Mas de nosotros
 					</a>
 				</div>
@@ -98,7 +102,7 @@
 </section>
 <!--========================= CARDS NOVEDADES =========================-->
 <section id="novedades">
-	<div class="container mt-3 mb-4">
+	<div class="container-xl mt-3 mb-4">
 		<h3 class=" text-center text-white fw-">NOVEDADES MAYO</h3>
 		<div class="row g-3">
 			<div class="col-sm-12 col-md-6 col-xl-4">
@@ -166,21 +170,22 @@
 	</div>
 </section>
 <!--========================= HORARIOS =========================-->
-<section id="horarios" class="container-fluid bg-white">
-	<div class=" mx-auto row pb-4" >
+<section id="horarios" class="container-xl bg-white">
+	<h5>NOS PODES ENCONTRAR EN:</h5>
+	<div class="contenedor_horarios mx-auto row pb-4">
 		<div id="horarios" class="col-sm-12 col-md-6 d-flex justify-content-center">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d425.93108368244845!2d-63.94478187480427!3d-31.346595899999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432eaba4ef94e1b%3A0x11fe91eb2cfe9bbf!2sCristobal%20Col%C3%B3n%20226%2C%20X5125%20Monte%20Cristo%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1653598093759!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 		<div class="text-center align-self-center col-sm-12 col-md-6">
 		<p class="fw-bold fs-3 mt-3">HORARIOS</p>
-			<ul class="d-flex row align-justify">		
-				<ol class="text-center fs-4">Lunes: 12:00hs a 20:00hs</ol>
-				<ol class="text-center fs-4">Martes: 12:00hs a 20:00hs</ol>
-				<ol class="text-center fs-4">Miercoles: 12:00hs a 20:00hs</ol>
-				<ol class="text-center fs-4">Jueves: 12:00hs a 20:00hs</ol>
-				<ol class="text-center fs-4">Viernes: 12:00hs a 20:00hs</ol>
-				<ol class="text-center fs-4">Sábado: 12:00hs a 20:00hs</ol>
-				<ol class="text-center fs-4">Domingo: 12:00hs a 20:00hs</ol>
+			<ul class="d-flex row align-justify text-center fs-4">		
+				<ol class="">Lunes: 12:00hs a 20:00hs</ol>
+				<ol class="">Martes: 12:00hs a 20:00hs</ol>
+				<ol class="">Miercoles: 12:00hs a 20:00hs</ol>
+				<ol class="">Jueves: 12:00hs a 20:00hs</ol>
+				<ol class="">Viernes: 12:00hs a 20:00hs</ol>
+				<ol class="">Sábado: 12:00hs a 20:00hs</ol>
+				<ol class="">Domingo: 12:00hs a 20:00hs</ol>
 			</ul>
 			<a class="btn btn-primary my-2" href="https://api.whatsapp.com/send?phone=543518138812&text=Me gustaria agendar un turno!" target="new_blank" role="button">RESERVÁ TU TURNO</a>
 		</div>
