--- a/merchandising.html
+++ b/merchandising.html
@@ -13,38 +13,154 @@
 <body>
 	
 <!--========================= HEADER =========================-->
-	<div id="header" class="sticky-top">	
-		<nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-dark container-fluid">
-		  <div class="container-fluid flex-fill d-flex">
-		    <a class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
-		    	<img src="img/cota-tittle.png">
-		    </a>		    
-		    <button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-		      <ul class="navbar-nav fs-5">
-		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="contacto.html">Contacto</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="staff.html">Staff</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="galeria.html">Galeria</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="merchandising.html">Merchandising</a>
-		        </li>	
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
-	</div>
-<!--===========================================================================-->
+<div id="header" class="sticky-top">		
+	<nav class="navbar justify-content-center navbar-expand-lg navbar-light container-fluid">
+	  <div class="container-fluid flex-fill d-flex">
+		<a title="Cota-Estudio" class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
+			<img src="img/cota-tittle.png">
+		</a>		    
+		<button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+		  <ul class="navbar-nav fs-5">
+			<li class="nav-item">
+			  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="contacto.html">Contacto</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="staff.html">Staff</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="galeria.html">Galeria</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="merchandising.html">Merchandising</a>
+			</li>	
+		  </ul>
+		</div>
+	  </div>	  
+	</nav>
+</div>
+<!--========================= PRODUCTOS =========================-->
+<section id="productos" class="container-xl mb-5">
+	<h2>También podes llevarte:</h2>
+	<div class="row row-cols-1 row-cols-md-3 g-3">
+		<div class="col">
+			<div class="card h-100 text-center">
+				<img src="img/piluso.jpg" class="card-img-top" alt="sombrero-piluso">
+				<div class="card-body">
+				<h5 class="card-title">Piluso CoTA</h5>
+				<p class="card-text mt-3">Llevate y lucí nuestro clásico piluso negro, que no puede faltar en largas sesiones de pintura</p>
+				<h6 class="text-center fs-3">$900</h6>
+				</div>
+				<div class="card-footer py-3">
+					<button type="button" class="btn btn-dark" data-bs-container="body" 
+					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-content="En este momento no contamos con stock de este producto." 
+					data-bs-original-title="" title="Lo sentimos!"> 
+					COMPRAR
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card h-100">
+				<img src="img/tatoo_care.jpg" class="card-img-top" alt="cuidado-de-tatuaje">
+				<div class="card-body">
+				<h5 class="card-title">Crema + Gel hidratante</h5>
+				<p class="card-text mt-3">Lo mejor para el cuidado de tu tatuaje, de la mano de los amigos de TATOO CARE</p>
+				<h6 class="text-center fs-3">$1500</h6>
+				</div>
+				<div class="card-footer py-3">
+					<button type="button" class="btn btn-dark" data-bs-container="body" 
+					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-content="En este momento no contamos con stock de este producto." 
+					data-bs-original-title="" title="Lo sentimos!"> 
+					COMPRAR
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card h-100">
+				<img src="img/remera_cota.jpg" class="card-img-top" alt="remera-cota">
+				<div class="card-body">
+				<h5 class="card-title">Remera CoTA</h5>
+				<p class="card-text mt-3">Podés lucir nuestra hermosa remera negra, mas negra que el corazón de tu ex</p>
+				<h6 class="text-center fs-3">$1000</h6>
+				</div>
+				<div class="card-footer py-3">
+					<button type="button" class="btn btn-dark" data-bs-container="body" 
+					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-content="En este momento no contamos con stock de este producto." 
+					data-bs-original-title="" title="Lo sentimos!"> 
+					COMPRAR
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card h-100">
+				<img src="img/300x/vinilos.jpg" class="card-img-top" alt="vinilo-selma-simpsons">
+				<div class="card-body">
+				<h5 class="card-title">Invierno con sol</h5>
+				<p class="card-text mt-3">Tecnica realizada con acrílicos, sobre vinilo, como siempre algo de los Simpsons.</p>
+				<h6 class="text-center fs-3">$500</h6>
+				</div>
+				<div class="card-footer py-3">
+					<button type="button" class="btn btn-dark" data-bs-container="body" 
+					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-content="En este momento no contamos con stock de este producto." 
+					data-bs-original-title="" title="Lo sentimos!"> 
+					COMPRAR
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card h-100">
+				<img src="img/300x/cuadro-hulk.jpg" class="card-img-top" alt="hulk-angry">
+				<div class="card-body">
+				<h5 class="card-title">SMASH HULK!</h5>
+				<p class="card-text mt-3">Cuadro de MDF, 30cmx30cm, pintado con latex, acrílico y pintura a la tiza,</p>
+				<h6 class="text-center fs-3">$1200</h6>
+				</div>
+				<div class="card-footer py-3">
+					<button type="button" class="btn btn-dark" data-bs-container="body" 
+					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-content="En este momento no contamos con stock de este producto." 
+					data-bs-original-title="" title="Lo sentimos!"> 
+					COMPRAR
+					</button>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card h-100">
+				<img src="img/300x/gohan.jpg" class="card-img-top" alt="gohan-ssj2">
+				<div class="card-body">
+				<h5 class="card-title">Gohan SSJ2</h5>
+				<p class="card-text mt-3">Pintado con acrílicos en madera de 50cmx40cm y por último tiene dos manos de barniz en aerosol.</p>
+				<h6 class="text-center fs-3">$1400</h6>
+				</div>
+				<div class="card-footer py-3">
+					<button type="button" class="btn btn-dark" data-bs-container="body" 
+					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-content="En este momento no contamos con stock de este producto." 
+					data-bs-original-title="" title="Lo sentimos!"> 
+					COMPRAR
+					</button>
+				</div>
+			</div>
+		</div>
+		
+		</div>
+  </div>
+</section>
+<!--========================== BTN FLOAT WSP ==========================-->
 <div class="btn-wsp">
 	<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!" title="Sacá tu turno" target="new_blank">
 		<img src="img/whatsapp.png" alt="whatsapp"></a>
@@ -62,6 +178,11 @@
 </div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+	<script>
+		var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+  return new bootstrap.Popover(popoverTriggerEl)
+})
+	</script>
 </body>
 </html> 
