--- a/staff.html
+++ b/staff.html
@@ -13,42 +13,57 @@
 <body>
 	
 <!--========================= HEADER =========================-->
-	<div id="header" class="sticky-top">	
-		<nav class="navbar justify-content-center navbar-expand-lg navbar-light bg-dark container-fluid">
-		  <div class="container-fluid flex-fill d-flex">
-		    <a class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
-		    	<img src="img/cota-tittle.png">
-		    </a>		    
-		    <button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-		      <ul class="navbar-nav fs-5">
-		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="contacto.html">Contacto</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="staff.html">Staff</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="galeria.html">Galeria</a>
-		        </li>
-		           <li class="nav-item">
-		          <a class="nav-link" href="merchandising.html">Merchandising</a>
-		        </li>	
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
+<div id="header" class="sticky-top">		
+	<nav class="navbar justify-content-center navbar-expand-lg navbar-light container-fluid">
+	  <div class="container-fluid flex-fill d-flex">
+		<a title="Cota-Estudio" class="navbar-brand flex-s-fill flex-md-fill  flex-xl-fill" href="#">
+			<img src="img/cota-tittle.png">
+		</a>		    
+		<button class="navbar-toggler flex-xl-fill" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+		  <ul class="navbar-nav fs-5">
+			<li class="nav-item">
+			  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="contacto.html">Contacto</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="staff.html">Staff</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="galeria.html">Galeria</a>
+			</li>
+			   <li class="nav-item">
+			  <a class="nav-link" href="merchandising.html">Merchandising</a>
+			</li>	
+		  </ul>
+		</div>
+	  </div>	  
+	</nav>
+</div>
+<!--========================= STAFF CARDS =========================-->
+	<article id="banner" class=" bg-dark d-flex align-items-center container-xl">
+		<div class="">
+			<div class="my-4 mx-auto row text-white">
+				<img class="mx-auto col-sm-12 col-md-6 image-fluid"src="img/equipo.jpg">			
+				<div class="titulo_baner text-center fs-2 mx-auto col-sm-12 col-md-6 align-self-center"><h3>Colectivo de Trabajadores Artisticos</h3>
+					<p class=" mt-2 align-self-center">
+						Trabajo a trabajo, el equipo y la unión que este trae se unifican para 
+						darle paso a obras únicas sin precedentes antes vistas en la ciudad.<br><br>
+						<strong>¿Quienes somos?</strong><br> 
+						Somos Personas simples que solo quieren deleitar tus ojos a través del arte.
+					</p>
+				</div>
+			</div>
+		</div>
+	</article>
+	<div id="cards_integrantes" class="mt-1 mb-4">
+		<h2>somos cota estudio</h2>
 	</div>
-<!--========================= CARDS INTEGRANTES =========================-->
-	<div class="mt-4 bg-dark text-light border-top border-bottom border-light border-3">
-		<h2 class="fs-2 mt-3 mx-3 text-center fw-bold">NOSOTROS SOMOS COTA ESTUDIO<h2>
-	</div>
-	<div id="staff_cards" class="g-5 d-flex justify-content-center text-center flex-wrap">
+	<div id="staff_cards" class="container-xl g-5 d-flex justify-content-center text-center flex-wrap">
 		<div id="presentacion-card" class=" card text-light border-2 border-white mb-3 col-md-6 col-xl-12 bg-dark" style="max-width: auto;">
 		  <div class="row mx-5 g-0">
 		    <div class="col-md-4">
@@ -56,16 +71,15 @@
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h5 class="card-title fs-3">Tio Hache</h5>
-		        <p class="card-text text-center mx-xl-5 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		        quis nostrud exercitation</p>
-		        <div class="socials_staff1">
+		        <h3 class="card-title fs-3">Tio Hache</h3>
+		        <p class="card-text text-center mx-xl-5 ">Empecé a meterme en el dibujo desde muy chico, con el tiempo aprendí a usar herramientas diversas y me gusta variar, 
+					desde lápices, brochas, rodillos y hasta máquinas de tatuar. 
+					Considero que el arte es un medio de expresión infinito que nos permite conectarnos con nosotros y nuestros sentimientos</p>		        
+				<div class="socials_staff1">
 					<div id="iconos" class="px-1 py-2">
-						<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!"	title="Comunicate con nosotros via whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
-						<a href="https://www.instagram.com/el.luchovitale.tattoo/" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
+						<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno con el Tio Hache!"	title="Comunicate con nosotros via whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
+						<a href="https://www.instagram.com/tio.hache/" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
 						<a href="https://www.facebook.com/CotaArt35-103750124939834" title="Acercate a ver nuestras publicaciones de facebook" target="new_blank"><i class="bi bi-facebook"></i></a>
-						<a href="#"><i class="bi bi-youtube"></i></a>
 					</div>
 				</div>
 		      </div>
@@ -79,16 +93,14 @@
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h5 class="card-title fs-3">Chancha</h5>
-		        <p class="card-text mx-xl-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		        quis nostrud exercitation</p>
+		        <h3 class="card-title fs-3">Chancha</h3>
+		        <p class="card-text mx-xl-5">Hace un poco más de un año que arranque a pintar, a la hora de diseñar me gusta mucho ultilizar dibujos animados y  rostros vectorizados.
+					Creo que el arte es un forma de expresión, muchas veces es algo bastante subjetivo, pero si los demás logran identificar  tú obra y tu estilo, el objetivo que se plantea con el arte, esta siendo cumplido. @ Monte Cristo, Cordoba, Argentina</p>
 		        <div class="socials_staff2">
 					<div id="iconos" class="px-1 py-2">
 						<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!"	title="Comunicate con nosotros via whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
-						<a href="https://www.instagram.com/el.luchovitale.tattoo/" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
+						<a href="https://www.instagram.com/chancha.art/" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
 						<a href="https://www.facebook.com/CotaArt35-103750124939834" title="Acercate a ver nuestras publicaciones de facebook" target="new_blank"><i class="bi bi-facebook"></i></a>
-						<a href="#"><i class="bi bi-youtube"></i></a>
 					</div>
 				</div>
 		      </div>
@@ -102,16 +114,15 @@
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h5 class="card-title fs-3">Chiry</h5>
-		        <p class="card-text mx-xl-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		        quis nostrud exercitation</p>
+		        <h3 class="card-title fs-3">Chiry</h3>
+		        <p class="card-text mx-xl-5">Hace aproximadamente un año que empecé a pintar. Entre los estilos que me gustan está el estilo libre, 
+					Street art y dibujos animados. Pero lo que más me gusta es intentar combinar estos 3 estilos.
+					El arte para mi es algo que le da de comer al alma y en si lo mejor que le puede pasar a alguien</p>
 		        <div class="socials_staff3">
 					<div id="iconos" class="px-1 py-2">
 						<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!"	title="Comunicate con nosotros via whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
-						<a href="https://www.instagram.com/el.luchovitale.tattoo/" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
+						<a href="https://www.instagram.com/chirybass/" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
 						<a href="https://www.facebook.com/CotaArt35-103750124939834" title="Acercate a ver nuestras publicaciones de facebook" target="new_blank"><i class="bi bi-facebook"></i></a>
-						<a href="#"><i class="bi bi-youtube"></i></a>
 					</div>
 				</div>
 		      </div>
@@ -125,16 +136,15 @@
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h5 class="card-title fs-3">Lucho</h5>
-		        <p class="card-text mx-xl-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		        quis nostrud exercitation</p>
+		        <h3 class="card-title fs-3">Lucho</h3>
+		        <p class="card-text mx-xl-5">De chico me introduje en el graffiti sin tenerlo como proyección pero hoy puedo decir que empecé a Pintar hace 1 año.
+					El arte me brindó una tranquilidad mental, y las herramientas para poder hacer de éste mi estilo de vida, me ayuda a crecer como persona y gradualmente como artista. 
+					Me identifico con el grafitti, pero me gusta variar y probar cosas nuevas, combinando estilos,diseños y tecnicas.</p>
 		        <div class="socials_staff4">
 						<div id="iconos" class="px-1 py-2">
 							<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!"	title="Comunicate con nosotros via whatsapp" target="new_blank"><i class="bi bi-whatsapp"></i></a>
 							<a href="https://www.instagram.com/el.luchovitale.tattoo/" target="_blank" title="Segui nuestras historias y sorteos!"><i class="bi bi-instagram"></i></a>
 							<a href="https://www.facebook.com/CotaArt35-103750124939834" title="Acercate a ver nuestras publicaciones de facebook" target="new_blank"><i class="bi bi-facebook"></i></a>
-							<a href="#"><i class="bi bi-youtube"></i></a>
 						</div>
 					</a>
 				</div>						       
@@ -147,7 +157,6 @@
 		<a href="https://api.whatsapp.com/send?phone=543518138812&text=Hola! Me gustaria agendar un turno!" title="Sacá tu turno" target="new_blank">
 			<img src="img/whatsapp.png" alt="whatsapp"></a>
 	</div>
-
 <!--========================= FOOTER =========================-->
 <div id="footer" class="w-100 d-flex align-items justify-content-center flex-wrap bg-secondary text-white">
 	<div id="iconos" class="px-1 py-2">
@@ -158,8 +167,6 @@
 		<p class="fs-6 px-3 pt-3 text-white"> Cota Estudio &copy; 2022 - TioOti - Todos los derechos reservados </p>
 	</div>
 </div>
-
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
 </body>
 </html> 
