--- a/galeria.html
+++ b/galeria.html
@@ -25,7 +25,7 @@
 		<div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
 		  <ul class="navbar-nav fs-5">
 			<li class="nav-item">
-			  <a class="nav-link active" aria-current="page" href="#">Home</a>
+			  <a class="nav-link" aria-current="page" href="index.html">Home</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="contacto.html">Contacto</a>
@@ -34,7 +34,7 @@
 			  <a class="nav-link" href="staff.html">Staff</a>
 			</li>
 			   <li class="nav-item">
-			  <a class="nav-link" href="galeria.html">Galeria</a>
+			  <a class="nav-link active" href="galeria.html">Galeria</a>
 			</li>
 			   <li class="nav-item">
 			  <a class="nav-link" href="merchandising.html">Merchandising</a>
@@ -48,7 +48,7 @@
 <section id="galeria" class="min-vh-100">
 	<div class="container-xl">
 		<div class="titulo_gallery1"> TIO HACHE</div>
-		<div class="gallery1 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+		<div class="gallery1 row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
 		<div class="col">
 			<img src="img/img_corregidas_900x600/th1.jpg" class="gallery-item" alt="gallery">
 		</div>
@@ -69,7 +69,7 @@
 		</div>
 		</div>
 		<div class="titulo_gallery2"> CHANCHA</div>
-		<div class="gallery2 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+		<div class="gallery row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
 		<div class="col">
 		<img src="img/img_corregidas_900x600/chch1.jpg" class="gallery-item" alt="gallery">
 		</div>
@@ -90,7 +90,7 @@
 		</div>
 		</div>
 		<div class="titulo_gallery3"> CHIRY</div>
-		<div class="gallery3 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+		<div class="gallery3 row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
 			<div class="col">
 			<img src="img/img_corregidas_900x600/chiry1.jpg" class="gallery-item" alt="gallery">
 			</div>
@@ -111,7 +111,7 @@
 			</div>
 		</div>
 		<div class="titulo_gallery4"> LUCHO</div>
-		<div class="gallery4 row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
+		<div class="gallery4 row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
 			<div class="col">
 			<img src="img/img_corregidas_900x600/lucho5.jpg" class="gallery-item" alt="gallery">
 			</div>
