--- a/merchandising.html
+++ b/merchandising.html
@@ -37,7 +37,7 @@
 			  <a class="nav-link" href="galeria.html">Galeria</a>
 			</li>
 			   <li class="nav-item">
-			  <a class="nav-link" href="merchandising.html">Merchandising</a>
+			  <a class="nav-link active" href="merchandising.html">Merchandising</a>
 			</li>	
 		  </ul>
 		</div>
@@ -46,7 +46,7 @@
 </div>
 <!--========================= PRODUCTOS =========================-->
 <section id="productos" class="container-xl mb-5">
-	<h2>También podes llevarte:</h2>
+	<h2>NUESTRA TIENDA :</h2>
 	<div class="row row-cols-1 row-cols-md-3 g-3">
 		<div class="col">
 			<div class="card h-100 text-center">
@@ -58,7 +58,7 @@
 				</div>
 				<div class="card-footer py-3">
 					<button type="button" class="btn btn-dark" data-bs-container="body" 
-					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-toggle="popover" data-bs-placement="top" 
 					data-bs-content="En este momento no contamos con stock de este producto." 
 					data-bs-original-title="" title="Lo sentimos!"> 
 					COMPRAR
@@ -76,11 +76,11 @@
 				</div>
 				<div class="card-footer py-3">
 					<button type="button" class="btn btn-dark" data-bs-container="body" 
-					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-toggle="popover" data-bs-placement="top" 
 					data-bs-content="En este momento no contamos con stock de este producto." 
 					data-bs-original-title="" title="Lo sentimos!"> 
 					COMPRAR
-					</button>
+					</button>									
 				</div>
 			</div>
 		</div>
@@ -94,7 +94,7 @@
 				</div>
 				<div class="card-footer py-3">
 					<button type="button" class="btn btn-dark" data-bs-container="body" 
-					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-toggle="popover" data-bs-placement="top" 
 					data-bs-content="En este momento no contamos con stock de este producto." 
 					data-bs-original-title="" title="Lo sentimos!"> 
 					COMPRAR
@@ -112,7 +112,7 @@
 				</div>
 				<div class="card-footer py-3">
 					<button type="button" class="btn btn-dark" data-bs-container="body" 
-					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-toggle="popover" data-bs-placement="top" 
 					data-bs-content="En este momento no contamos con stock de este producto." 
 					data-bs-original-title="" title="Lo sentimos!"> 
 					COMPRAR
@@ -130,7 +130,7 @@
 				</div>
 				<div class="card-footer py-3">
 					<button type="button" class="btn btn-dark" data-bs-container="body" 
-					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-toggle="popover" data-bs-placement="top" 
 					data-bs-content="En este momento no contamos con stock de este producto." 
 					data-bs-original-title="" title="Lo sentimos!"> 
 					COMPRAR
@@ -148,7 +148,7 @@
 				</div>
 				<div class="card-footer py-3">
 					<button type="button" class="btn btn-dark" data-bs-container="body" 
-					data-bs-toggle="popover" data-bs-placement="right" 
+					data-bs-toggle="popover" data-bs-placement="top" 
 					data-bs-content="En este momento no contamos con stock de este producto." 
 					data-bs-original-title="" title="Lo sentimos!"> 
 					COMPRAR
