--- a/staff.html
+++ b/staff.html
@@ -25,13 +25,13 @@
 		<div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
 		  <ul class="navbar-nav fs-5">
 			<li class="nav-item">
-			  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+			  <a class="nav-link" aria-current="page" href="index.html">Home</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="contacto.html">Contacto</a>
 			</li>
 			   <li class="nav-item">
-			  <a class="nav-link" href="staff.html">Staff</a>
+			  <a class="nav-link active" href="staff.html">Staff</a>
 			</li>
 			   <li class="nav-item">
 			  <a class="nav-link" href="galeria.html">Galeria</a>
@@ -64,14 +64,14 @@
 		<h2>somos cota estudio</h2>
 	</div>
 	<div id="staff_cards" class="container-xl g-5 d-flex justify-content-center text-center flex-wrap">
-		<div id="presentacion-card" class=" card text-light border-2 border-white mb-3 col-md-6 col-xl-12 bg-dark" style="max-width: auto;">
+		<div id="presentacion-card" class=" card text-light border-2 border-white mb-3 col-md-12 col-xl-12 bg-dark" style="max-width: auto;">
 		  <div class="row mx-5 g-0">
 		    <div class="col-md-4">
 		      <img src="img/tio_hache.jpg" class="img-fluid rounded-3" alt="...">
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h3 class="card-title fs-3">Tio Hache</h3>
+		        <h3 class="card-title">Tio Hache</h3>
 		        <p class="card-text text-center mx-xl-5 ">Empecé a meterme en el dibujo desde muy chico, con el tiempo aprendí a usar herramientas diversas y me gusta variar, 
 					desde lápices, brochas, rodillos y hasta máquinas de tatuar. 
 					Considero que el arte es un medio de expresión infinito que nos permite conectarnos con nosotros y nuestros sentimientos</p>		        
@@ -86,14 +86,14 @@
 		    </div>
 		  </div>
 		</div>
-		<div class="card mb-3 text-light border-2 border-white bg-dark col-md-6 col-xl-12 ">
+		<div class="card mb-3 text-light border-2 border-white bg-dark col-md-12 col-xl-12 ">
 		  <div class="row g-0 mx-5 flex-xl-row-reverse">
 		    <div class="col-md-4">
 		      <img src="img/chancha.jpg" class="img-fluid rounded-3" alt="...">
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h3 class="card-title fs-3">Chancha</h3>
+		        <h3 class="card-title">Chancha</h3>
 		        <p class="card-text mx-xl-5">Hace un poco más de un año que arranque a pintar, a la hora de diseñar me gusta mucho ultilizar dibujos animados y  rostros vectorizados.
 					Creo que el arte es un forma de expresión, muchas veces es algo bastante subjetivo, pero si los demás logran identificar  tú obra y tu estilo, el objetivo que se plantea con el arte, esta siendo cumplido. @ Monte Cristo, Cordoba, Argentina</p>
 		        <div class="socials_staff2">
@@ -107,14 +107,14 @@
 		    </div>
 		  </div>
 		</div>
-		<div class="card mb-3 text-light border-2 border-white bg-dark col-md-6 col-xl-12">
+		<div class="card mb-3 text-light border-2 border-white bg-dark col-md-12 col-xl-12">
 		  <div class="row mx-5 g-0">
 		    <div class="col-md-4">
 		      <img src="img/chiry.jpg" class="img-fluid rounded-3" alt="...">
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h3 class="card-title fs-3">Chiry</h3>
+		        <h3 class="card-title">Chiry</h3>
 		        <p class="card-text mx-xl-5">Hace aproximadamente un año que empecé a pintar. Entre los estilos que me gustan está el estilo libre, 
 					Street art y dibujos animados. Pero lo que más me gusta es intentar combinar estos 3 estilos.
 					El arte para mi es algo que le da de comer al alma y en si lo mejor que le puede pasar a alguien</p>
@@ -129,14 +129,14 @@
 		    </div>
 		  </div>
 		</div>
-		<div class="card mb-3 text-light border-2 border-white bg-dark col-md-6 col-xl-12">
+		<div class="card mb-3 text-light border-2 border-white bg-dark col-md-12 col-xl-12">
 		  <div class="row mx-5 g-0 flex-xl-row-reverse">
 		    <div class="col-md-4">
 		      <img src="img/lucho.jpg" class="img-fluid rounded-3" alt="Lucho">
 		    </div>
 		    <div class="col-md-8 align-self-center">
 		      <div class="card-body">
-		        <h3 class="card-title fs-3">Lucho</h3>
+		        <h3 class="card-title">Lucho</h3>
 		        <p class="card-text mx-xl-5">De chico me introduje en el graffiti sin tenerlo como proyección pero hoy puedo decir que empecé a Pintar hace 1 año.
 					El arte me brindó una tranquilidad mental, y las herramientas para poder hacer de éste mi estilo de vida, me ayuda a crecer como persona y gradualmente como artista. 
 					Me identifico con el grafitti, pero me gusta variar y probar cosas nuevas, combinando estilos,diseños y tecnicas.</p>
