--- a/contacto.html
+++ b/contacto.html
@@ -25,10 +25,10 @@
 		<div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
 		  <ul class="navbar-nav fs-5">
 			<li class="nav-item">
-			  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+			  <a class="nav-link" aria-current="page" href="index.html">Home</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="contacto.html">Contacto</a>
+			  <a class="nav-link active" href="contacto.html">Contacto</a>
 			</li>
 			   <li class="nav-item">
 			  <a class="nav-link" href="staff.html">Staff</a>
